# sdf3dtools

./: sdf3dtool.sln
cppsdftool/: .gitignore  CMakeLists.txt  FastWindingNumber.h  FastWindingNumber.hpp  PreparedTriangle.cpp  PreparedTriangle.hpp  README.md  TriangleGrid.cpp  TriangleGrid.hpp  main.cpp  utils.cpp  utils.hpp
cppsdftool/cmake/recipes/: simde.cmake
cppsdftool/tests/: winding_number_tests.cpp
iglsdftool/: CMakeLists.txt  main.cpp  test_libigl_winding.cpp  utils.cpp
pysdftool/: prepared_triangle.py  process_model.py  triangle_grid.py
sdf3dtool/: Array2D.cs  Array3D.cs  CellProcessor.cs  HalfFloat.cs  Helper.Assimp.cs  Helper.Umesh.cs  Helper.Unigine.cs  Helper.Utils.cs  Helper.cs  MeshGenerator.cs  PreparedTriangle.cs  Program.cs  Texture3D.cs  TriangleGrid.cs  TriangleMap.cs  Vector3i.cs  Vector4i.cs  sdf3dtool.csproj  sdftool.csproj
sdf3dtool/SdfTool/: CellProcessor.cs  DistanceData.cs  HalfFloat.cs  Vector2e.cs  Vector3e.cs  Vector3i.cs  Vector4e.cs  Vector4i.cs
sdf3dtool/SdfTool/CellProcessor/: Bricks.cs  CellProcessor.cs  Cells.cs  Lods.cs  NestedLods.cs  Utils.cs
sdf3dtool/Utils/: Array2D.cs  Array3D.cs  Assimp.cs  Bitmap.cs  Ktx.cs  Obj.cs  Umesh.cs  Unigine.cs  Utils.cs
